# fast_football

./: README.md
data_football/: .coverage  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
data_football/data_football/: app.py  models.py  schemas.py
data_football/db/: database.py
data_football/football/: app.py  utils.py
data_football/football/adapters/: database.py  models.py
data_football/football/domain/: entities.py
data_football/football/features/championships/: __init__.py  api.py
data_football/football/features/goals/: __init__.py  api.py
data_football/football/features/matches/: __init__.py  api.py
data_football/football/features/players/: __init__.py  api.py
data_football/football/features/rounds/: __init__.py  api.py
data_football/football/features/stadiums/: __init__.py  api.py
data_football/football/features/teams/: __init__.py  api.py
data_football/migrations/: env.py
data_football/migrations/versions/: 103a684b2891_add_championships_table.py  147003fd0feb_add_matches_table.py  39eb7db50853_add_rounds_table.py  409595b2e9e6_add_stadiums_table.py  645b0e6282cb_add_teams_table.py  9adea6869a3c_create_users_table.py  a6086b41b300_add_goals_table.py  be5b7d402265_add_stadiums_table.py  d8000e22aa0d_add_players_table.py  f520647ffbf5_add_matches_table.py
data_football/tests/: conftest.py  test_app.py  test_db.py
data_football/tests/adapters/: test_database.py
data_football/tests/app/: test_app_create.py  test_app_delete.py  test_app_get.py  test_app_gets.py  test_app_update.py
(+10 files in other folders)
